@@ -1,14 +1,14 @@
 package cuchaz.enigma.config;
 
+import org.tinylog.Logger;
+
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Deque;
 import java.util.LinkedList;
 
 public class ConfigContainer {
-
 	private Path configPath;
 	private boolean existsOnDisk;
 
@@ -22,10 +22,10 @@ public class ConfigContainer {
 		if (this.configPath == null) throw new IllegalStateException("File has no config path set!");
 		try {
 			Files.createDirectories(this.configPath.getParent());
-			Files.write(this.configPath, this.serialize().getBytes(StandardCharsets.UTF_8));
+			Files.writeString(this.configPath, this.serialize());
 			this.existsOnDisk = true;
 		} catch (IOException e) {
-			e.printStackTrace();
+			Logger.error(e, "Failed to save config file!");
 		}
 	}
 
@@ -59,7 +59,7 @@ public class ConfigContainer {
 				cc.existsOnDisk = true;
 			}
 		} catch (IOException e) {
-			e.printStackTrace();
+			Logger.error(e, "Failed to create config container!");
 		}
 
 		if (cc == null) {
@@ -93,5 +93,4 @@ public class ConfigContainer {
 		});
 		return cc;
 	}
-
 }
